--- a/src/style/iconfont.less
+++ b/src/style/iconfont.less
@@ -1,8 +1,10 @@
 @font-face {
-  font-family: "iconfont";
-  /* Project id 3519882 */
-  src: url('//at.alicdn.com/t/c/font_3519882_tpkt44dzjy8.woff2?t=1679210609859') format('woff2'), url('//at.alicdn.com/t/c/font_3519882_tpkt44dzjy8.woff?t=1679210609859') format('woff'), url('//at.alicdn.com/t/c/font_3519882_tpkt44dzjy8.ttf?t=1679210609859') format('truetype');
+  font-family: "iconfont"; /* Project id 3519882 */
+  src: url('//at.alicdn.com/t/c/font_3519882_tpkt44dzjy8.woff2?t=1679210609859') format('woff2'),
+       url('//at.alicdn.com/t/c/font_3519882_tpkt44dzjy8.woff?t=1679210609859') format('woff'),
+       url('//at.alicdn.com/t/c/font_3519882_tpkt44dzjy8.ttf?t=1679210609859') format('truetype');
 }
+
 .iconfont {
   font-family: "iconfont" !important;
   font-size: 16px;
@@ -10,129 +12,167 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .icon-guanbi:before {
   content: "\e606";
 }
+
 .icon-shoucang:before {
   content: "\e607";
 }
+
 .icon-fenxiang:before {
   content: "\e608";
 }
+
 .icon-dianzan2:before {
   content: "\e609";
 }
+
 .icon-shouji:before {
   content: "\e60a";
 }
+
 .icon-shanchu:before {
   content: "\e60b";
 }
+
 .icon-youjiantou:before {
   content: "\e60c";
 }
+
 .icon-sousuo:before {
   content: "\e60d";
 }
+
 .icon-wode:before {
   content: "\e60e";
 }
+
 .icon-lishi:before {
   content: "\e60f";
 }
+
 .icon-shipin:before {
   content: "\e610";
 }
+
 .icon-dianzan:before {
   content: "\e611";
 }
+
 .icon-wenda:before {
   content: "\e612";
 }
+
 .icon-shouye:before {
   content: "\e613";
 }
+
 .icon-yanzhengma:before {
   content: "\e614";
 }
+
 .icon-zuojiantou:before {
   content: "\e615";
 }
+
 .icon-wuwangluo:before {
   content: "\e616";
 }
+
 .icon-yuedu:before {
   content: "\e617";
 }
+
 .icon-zuopin:before {
   content: "\e618";
 }
+
 .icon-gengduo:before {
   content: "\e604";
 }
+
 .icon-pinglun:before {
   content: "\e605";
 }
+
 .icon-add:before {
   content: "\e664";
 }
+
 .icon-arrow-down:before {
   content: "\e665";
 }
+
 .icon-ashbin:before {
   content: "\e666";
 }
+
 .icon-arrow-right:before {
   content: "\e667";
 }
+
 .icon-browse:before {
   content: "\e668";
 }
+
 .icon-chart-pie:before {
   content: "\e669";
 }
+
 .icon-direction-down:before {
   content: "\e66b";
 }
+
 .icon-eye-close:before {
   content: "\e66f";
 }
+
 .icon-error:before {
   content: "\e670";
 }
+
 .icon-favorite:before {
   content: "\e671";
 }
+
 .icon-fabulous:before {
   content: "\e672";
 }
+
 .icon-search:before {
   content: "\e67d";
 }
+
 .icon-setting:before {
   content: "\e67e";
 }
+
 .icon-work:before {
   content: "\e683";
 }
+
 .icon-add-bold:before {
   content: "\e685";
 }
+
 .icon-arrow-down-bold:before {
   content: "\e686";
 }
+
 .icon-arrow-right-bold:before {
   content: "\e687";
 }
+
 .icon-select-bold:before {
   content: "\e688";
 }
+
 .icon-check-item-filling:before {
   content: "\e689";
 }
+
 .icon-home-filling:before {
   content: "\e68d";
-}
-body {
-  background-color: pink;
 }
