--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,3 +1,20 @@
-body{
-    background-color: pink;
+//引入字体图标
+@import './iconfont.less';
+
+body {
+  background-color: #f5f7f9;
+  .van-nav-bar .van-icon {
+    color: #fff;
+  }
+}
+.nav-color {
+  background-color: #2ca6ff !important;
+}
+.van-nav-bar__content {
+  // background-color: #3296fa;
+  .van-nav-bar__title,
+  .van-nav-bar__text,
+  .van-nav-bar .van-icon {
+    color: #fff;
+  }
 }
